lstm multi-step forecasting and ANN beginning

--- a/modeling/LSTM (Multi-Prediction).ipynb
+++ b/modeling/LSTM (Multi-Prediction).ipynb
@@ -150,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -177,6 +179,13 @@
    ],
    "source": [
     "df_raw.plot(figsize=(18,5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean data"
    ]
   },
   {
@@ -634,7 +643,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
